2022-09-04T01:42:44Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2986460239
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 163 315 / 178 339
* notice: next accum: outdated-unq outdated-all / unq all: 163 315 / 178 338
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-08-21]

2022-09-03T16:20:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2985037176
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 162 314 / 178 339
* notice: next accum: outdated-unq outdated-all / unq all: 163 315 / 178 339
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-20] / []

2022-09-02T16:21:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2980462912
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 162 314 / 178 338
* notice: next accum: outdated-unq outdated-all / unq all: 162 314 / 178 339
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T08:20:10Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977627382
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 162 314 / 177 337
* notice: next accum: outdated-unq outdated-all / unq all: 162 314 / 178 338
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-01T16:22:16Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973284887