@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-04T01:42:44Z",
-  "count_outdated" : 315,
-  "uniques_outdated" : 163,
-  "count" : 338,
+  "timestamp" : "2022-09-05T01:53:41Z",
+  "count_outdated" : 317,
+  "uniques_outdated" : 164,
+  "count" : 339,
   "uniques" : 178,
   "clones" : [
-    {
-      "timestamp": "2022-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 4,
