@@ -1,3 +1,11 @@
+2022-09-05T01:53:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990336798
+* notice: last 14d: unq all: 4 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 163 315 / 178 338
+* notice: next accum: outdated-unq outdated-all / unq all: 164 317 / 178 339
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-21] / []
+
 2022-09-04T01:42:44Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2986460239
 * notice: last 14d: unq all: 4 23
